...
    
    var description: String {
        switch self {
        case .nowPlaying: return "Now Playing Movies"
        case .popular: return "Popular Movies"
        case .topRated: return "Top Rated Movies"
        case .upcoming: return "Upcoming Movies"
        }
    }
}

protocol MovieTypesControllerDelegate: class {
    func didSelectMovieType(_ type: MovieType)
...
        navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .cancel,
                                                            target: self,
                                                            action: #selector(handleDismissal))
    }
    
    private func setupTableView() {
        tableView.accessibilityLabel = "Movie Types table"
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: reuseIdentifier)
        tableView.tableFooterView = UIView()
    }
    
    // MARK: - Selectors
    @objc private func handleDismissal() {
...
