...
    private let reachability = try! Reachability()
    private let networkHandling = NetworkHandling()
    private let heartAnimationView = AnimationView(animation: Animation.named("love"))
    
    private let movieListButton: ActionButton = {
        let button = ActionButton(type: .system)
        button.setTitle("To Movie List", for: .normal)
        button.titleLabel?.font = .systemFont(ofSize: 16, weight: .bold)
        button.setDimensions(width: 200, height: 50)
        button.setTitleColor(.white, for: .normal)
        button.backgroundColor = .red
        button.layer.cornerRadius = 25
        button.addTarget(self, action: #selector(didTapMovieListButton), for: .touchUpInside)
...
